# AIS

./: .gitignore  Cargo.toml  IMPLEMENTATION_GUIDANCE.md  README.md  SPECIFICATION.md
.claude/: settings.local.json
.claude/skills/mcp-tool-integrity/: SKILL.md
crates/ais-audit/: Cargo.toml
crates/ais-audit/examples/: audit_chain.rs
crates/ais-audit/src/: chain.rs  entry.rs  error.rs  lib.rs
crates/ais-bench/: Cargo.toml
crates/ais-bench/examples/: bench_cert.rs  bench_proxy.rs  bench_replay.rs  bench_session.rs
crates/ais-bench/src/: bench_cert.rs  bench_proxy.rs  bench_replay.rs  bench_session.rs  lib.rs  main.rs  report.rs
crates/ais-cert/: Cargo.toml
crates/ais-cert/examples/: cert_sign_verify.rs
crates/ais-cert/src/: certificate.rs  error.rs  lib.rs  verification.rs
crates/ais-cli/: Cargo.toml
crates/ais-cli/src/: cli.rs  error.rs  main.rs
crates/ais-cli/src/commands/: mod.rs  sign_model.rs  validate_audit.rs  verify_model.rs
crates/ais-cli/tests/: ais_core_integration.rs
crates/ais-crypto/: Cargo.toml
crates/ais-crypto/examples/: hash.rs  sign_verify.rs
crates/ais-crypto/src/: error.rs  hash.rs  lib.rs  random.rs  signing.rs
crates/ais-proxy/: Cargo.toml
crates/ais-proxy/src/: chat_handler.rs  config.rs  error.rs  lib.rs  main.rs  router.rs  session_handler.rs  state.rs
crates/ais-proxy/tests/: proxy_integration.rs
crates/ais-session/: Cargo.toml
crates/ais-session/examples/: frame.rs
crates/ais-session/src/: error.rs  frame.rs  lib.rs  session.rs  validation.rs
crates/ais-tool-integrity/: Cargo.toml
crates/ais-tool-integrity/src/: error.rs  lib.rs  main.rs
demos/: Cargo.toml
demos/examples/: openai_proxy_demo.rs  replay_attack_demo.rs  rogue_model_demo.rs  tamper_demo.rs
demos/src/: lib.rs
docs/research/: agent_incidents.md  capability_v0.md  capability_v1_experiment.md  capability_v1_hypothesis.md  capability_validation.md  capability_validation_v1.md  capability_vs_signed_authorization.md  deployment_assumptions.md  h1_validation.md  threat_model_limits.md  tls_overlap.md  why_ais.md
docs/research/scenarios/: enterprise_agent.md  hospital_llm.md  public_cloud_api.md
