[package]
name = "ais-demos"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "AIS security demonstration examples."
publish = false

[dependencies]
ais-audit = { path = "../crates/ais-audit" }
ais-cert = { path = "../crates/ais-cert" }
ais-crypto = { path = "../crates/ais-crypto" }
ais-proxy = { path = "../crates/ais-proxy" }
ais-session = { path = "../crates/ais-session" }
axum = "0.7"
hex = "0.4"
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
