[package]
name = "ais-bench"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "AIS-Core performance benchmarks."
publish = false

[[bin]]
name = "ais-bench"
path = "src/main.rs"

[dependencies]
ais-audit = { path = "../ais-audit" }
ais-cert = { path = "../ais-cert" }
ais-crypto = { path = "../ais-crypto" }
ais-proxy = { path = "../ais-proxy" }
ais-session = { path = "../ais-session" }
axum = "0.7"
hex = "0.4"
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
