[package]
name = "ais-session"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Minimal deterministic authenticated session framing for AIS-Core."

[dependencies]
ais-crypto = { path = "../ais-crypto" }
ciborium = "0.2"
serde = { version = "1", features = ["derive"] }
thiserror = "2"

